--- a/style copy.css
+++ b/style copy.css
@@ -243,7 +243,7 @@ p {
 
 .home {
     position: relative;
-    background-image: url('img2/');
+    background-image: url('pierre-chatel-innocenti-pxoZSTdAzeU-unsplash.jpg');
     height: auto;
     background-position: center;
     background-size: cover;
