--- a/style copy.css
+++ b/style copy.css
@@ -243,7 +243,7 @@ p {
 
 .home {
     position: relative;
-    background-image: url('pierre-chatel-innocenti-pxoZSTdAzeU-unsplash.jpg');
+    background-image: url('https://github.com/vishalnsd/Lamp_store/blob/main/pierre-chatel-innocenti-pxoZSTdAzeU-unsplash.jpg?raw=true');
     height: auto;
     background-position: center;
     background-size: cover;
